src/test/deca/context/invalid/equals-noParam.deca
class A {
	boolean equals(){
	 return false;
}
}

{ Object o = new A();
  if (o.equals(o)){
  println("jej");
}
}


